--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
-<iframe id="JotFormIFrame-242515822122346" title="Magic Powershorts" allow="geolocation; microphone; camera" src="https://eu.jotform.com/app/242515822122346?appEmbedded=1" style="height:600px; width:375px; border: 0;"></iframe>
-
+<iframe src="https://app.jotform.com/242515822122346/242516513487358" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
 </html>
