--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<iframe src="https://app.jotform.com/242515822122346/242516513487358" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://app.jotform.com/242515822122346/242516513487358" frameborder="0" allowfullscreen></iframe>
+</body>
 </html>
