--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Favicon Link -->
+    <link rel="icon" type="image/png" href="https://files.jotform.com/jufs/magicpowersports1/form_files/logo-.66df5e9c61f5a5.70473801.png?md5=hnMkF0DuIev6A5QYeXYq2Q&expires=1725923246&height=80">
+    
     <style>
         html, body {
             height: 100%;
