--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Favicon Link -->
-    <link rel="icon" type="image/png" href="https://files.jotform.com/jufs/magicapproved/form_files/logo-.6702f5cd3321f4.40291974.png?md5=0-_3qV6bYYCRYiCG09Jb8Q&expires=1728860952&height=80">
+    <link rel="icon" type="image/png" href="https://magicapprovals.com/magicapprovalsicon.png?md5=0-_3qV6bYYCRYiCG09Jb8Q&expires=1728860952&height=80">
     
     <style>
         html, body {
