--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <body style="background-color:#ffffff">
-<link rel="icon" href="data:,">
+<link rel="icon" href=" ">
 </body>
 </html>
